# otPSI-CA

./: .gitignore  CMakeLists.txt  README.md  cek_kg.txt
include/: common.h
include/crypto/: cek.h  paillier.h
include/hash/: hashtable.h
include/io/: setio.h
include/poly/: flt_poly.h
include/protocol/: gs19.h  gte.h  otpsica.h  smt.h
src/: main.cc
src/crypto/: cek.cc  paillier.cc
src/hash/: hashtable.cc
src/io/: setio.cc
src/poly/: flt_poly.cc
src/protocol/: gs19.cc  gte.cc  otpsica.cc  smt.cc
tests/: benchmark.cc  benchmark_gs19.cc  test_main.cc
